@@ -110,7 +110,8 @@ void ScrollingList::setItems( std::vector<Item *> *items )
     items_ = items;
     if (items_)
     {
-        itemIndex_ = loopDecrement(0, selectedOffsetIndex_, items_->size());
+        size_t size = items_->size();
+        itemIndex_ = loopDecrement(size, selectedOffsetIndex_, size);
     }
 }
 
@@ -150,9 +151,9 @@ unsigned int ScrollingList::loopIncrement(size_t offset, size_t index, size_t si
 
 unsigned int ScrollingList::loopDecrement(size_t offset, size_t index, size_t size) const
 {
-    if (size == 0) return 0;
-    size_t result = offset + size - index;
-    return static_cast<unsigned int>(result % size);
+    if (size == 0 || offset + size <= index) return 0;
+
+    return static_cast<unsigned int>((offset + size - index) % size);
 }
 
 
